--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
-  - type: worker
-    name: telegram-bot
-    runtime: python
-    repo: https://github.com/pjtdg2025/price-alert 
-    branch: main
+  - type: web
+    name: binance-alert-bot
+    env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
-plan: free
+    envVars:
+      - key: WEBHOOK_URL
+        value: https://price-alert-roro.onrender.com
