--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-python-telegram-bot==20.7
-aiohttp==3.9.3
-httpx==0.25.2
 fastapi
 uvicorn
-pip install fastapi uvicorn httpx python-telegram-bot
-
+httpx
+python-telegram-bot
