--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-python-telegram-bot[asyncio]==20.3
 httpx==0.24.1
+python-telegram-bot[job-queue,asyncio]==20.3
