--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.95.2
+python-telegram-bot==20.3
 uvicorn[standard]==0.22.0
-httpx==0.24.1
-python-telegram-bot[job-queue,asyncio]==20.3
+fastapi==0.95.2
+httpx==0.24.0
+apscheduler==3.10.5
